# gp2k10-uhc-profiling

./: .gitignore  README  notes.txt
benchmark/: Main.hs  Makefile  RESULTS.txt  benchmark.cabal  runBenchmarks.sh
benchmark/Auxiliary/: Logic.hs  TestSimple.hs  Tree.hs
benchmark/Derived/Eq/: Logic  Logic.hs  Tree
benchmark/Hand/Eq/: Logic.hs  Tree.hs
benchmark/results/: Test-O0  Test-O1  Test-O2  Test-O3  benchie-O0  benchie-O1  benchie-O2  benchie-O3
benchmark/src/: Main.hs
benchmark/src/Auxiliary/: Auxiliary.hs  Logic.hs  TestTree.hs  Tree.hs
benchmark/src/Derived/Eq/: Logic  Tree  Tree.hs
benchmark/src/Derived/Functor/: Tree  Tree.hs
benchmark/src/Derived/Id/: Identity.hs  Logic.hs  Tree.hs
benchmark/src/Hand/Eq/: .gitignore  Logic  Tree  Tree.hs
benchmark/src/Hand/Functor/: Tree  Tree.hs
benchmark/src/Hand/Id/: Logic.hs  Tree.hs
core-code-analysis/: ADT.c  ADT.hi  ADT.hs  Empty.c  Empty.hi  Empty.hs  Identity.hs  compilefile.sh  generic.hs  nongeneric-deriving.hs  nongeneric.hs  notes.txt  runtests.sh
identity/: Identity  Identity.hs
optimize/src/: Core.hs  Name.hs  Optimize.hs  State.hs  Util.hs
report/: Appendix.lyx  BenchmarkResults.lyx  BenchmarkingGenerics.lyx  BenchmarkingGenericsInUHC.lyx  ComparingCoreCode.lyx  Library.bib  Results.numbers  external_templates  lhs2tex.sty
report/paper/: Appendix.lyx  BenchmarkResults.lyx  BenchmarkingGenericsInUHC.lyx  BenchmarkingMethodology.lyx  ComparingCoreCode.lyx  ImprovingPerformance.lyx  (+2 more)
test/: Deriving.c  Deriving.eh2  Deriving.hi  Deriving.hs  Non.c  Non.eh2  Non.hi  Non.hs
(+1 files in other folders)
